# syllapy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  azure-pipeline.ml  azure-pipeline.yml  azure-pipelines.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
syllapy/: __init__.py  about.py  data.csv  data.json  data_loader.py
tests/: test_syllables.py  test_syllapy.py  test_validity.py
