[tool.poetry]
name = "syllapy"
version = "0.7.0"
description = "Calculate syllable counts for English words."
authors = ["Michael Holtzscher <mholtz@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mholtzscher/syllapy"
homepage = "https://github.com/mholtzscher/syllapy"

keywords = ['syllables', 'nlp']

[tool.poetry.dependencies]
python = "^3.6"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
pytest = "^3"
pytest-runner = "^4"
black = "^18.3-alpha.0"
pre-commit = "^1"
pylint = "^2"
mypy = "^0.641.0"
codecov = "^2"
pytest-cov = "^2"
pytest-azurepipelines = "^0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
